--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -250,18 +250,19 @@
 }
 
 .new--writer--wrapper {
+  border-top: 1px solid #E5E5E5;
   #waiting--for--approval {
     display: flex;
     flex-direction: row;
     .flex--item {
       position: relative;
-      background-color: #ebf2f8;
-      margin: 0;
       flex-grow: 2;
+      background-color: #C5B7B820;
       .flex--profile {
-        opacity: 0.4;
         pointer-events: none;
         z-index:1;
+        opacity: 0.9;
+        background-color: transparent;
       }
       .overlay {
         display: flex;
@@ -271,14 +272,15 @@
         align-items: center;
         margin: 36px 0;
         padding: 10px 30px;
-        bottom: 10%;
+        bottom: -2%;
+        left: -8px;
         background-color: white;
-        border: 1px solid WhiteSmoke;
-        border-left: none;
+        border: 1px solid #C5B7B850;
         .icon, h5 {
           margin: 0;
-          font-weight: 600;
+          font-weight: 400;
           font-style: italic;
+          color: black;
         }
         h5 {
           margin-left: 5px;
@@ -293,17 +295,23 @@
     }
 
     .new--writer--flex--two {
+      border-left: 1px solid #E5E5E5;
+      margin-left: 30px;
+      padding: 30px 0 0 30px;
+      max-width: 500px;
       * {
-          color: black;
           display: block;
-          margin: 0 20px;
+          margin: 0;
+      }
+      p {
+        font-size: 13px;
       }
       .links {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        a, div {
-          margin: 0;
+        a {
+          margin-bottom: 5px;
         }
       }
     }
