even more style changes lol

--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -5,7 +5,7 @@
         <div class="flex--item">
           <div class="overlay">
             <img src="http://img.icons8.com/metro/26/000000/lock.png" class="icon">
-            <h5>Your profile is waiting for review</h5>
+            <h5>Your profile is waiting to be reviewed</h5>
           </div>
           <%= render 'profile' %>
         </div>
