--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -1,7 +1,7 @@
 <div class="new--writer--wrapper">
   <div class="skinny_wrapper">
     <div id="waiting--for--approval">
-      <div style="padding-top: 30px;">
+      <div style="padding-top: 30px; width: 100%;">
         <div class="flex--item">
           <div class="overlay">
             <img src="http://img.icons8.com/metro/26/000000/lock.png" class="icon">
