marcela gets writer applications

--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -102,7 +102,7 @@
   <hr />
 
   <p>
-    If you're confused about any of this styling, or want to do something specific, you can email Mia at <b>mia@theteenmagazine.com</b>
+    If you're confused about any of this styling, or want to do something specific, you can email Marcela at <b>marcela@theteenmagazine.com</b>
   </p>
 
   <p>Read "<a href="/finding-images">Finding Images</a>" Next →</p>
