--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,17 +10,35 @@
 <h1 id="page_title" style="margin-bottom: -80px; margin-top:-50px; border-bottom: none;">Users</h1>
 
 <div id="posts_wrapper" class="skinny_wrapper">
-  <% @users.each do |user| %>
-      <% if user.monthly_views == nil %>
-        <% user.monthly_views = 0 %>
-        <% user.save %>
-      <% end %>
-      <div class="user">
-        <h3><%= user.posts_count %> <a href="#"><%= link_to user.email, user%></a></h3>
-      </div>
-  <% end %>
-  <%= link_to "New User", new_user_registration_path, :class => "link--edit" %>
-  <% if current_user && current_user.admin? %>
-  <br /><a class="link--edit" href="/ranking">Ranking</a>
-  <% end %>
+  <div class="skinny_wrapper">
+    <% @users.each do | user | %>
+        <% if user != nil %>
+          <div class="flex--profile">
+            <% if user.profile.exists? %>
+              <%= image_tag(user.profile.url(:square), :class => "profile_img") %>
+            <% else %>
+              <%= image_tag("https://isw.fbk.eu/sites/isw2015.fbk.eu/files/Profilo_2.jpg", :class => "profile_img") %>
+            <% end %>
+            <div class="info">
+            <h2 style="margin-bottom: 5px;">
+              <% @name =
+                if (user.first_name != "" && user.first_name !=nil)
+                  user.first_name
+                end
+                if (user.last_name != "" && user.last_name!= nil)
+                  @name = @name + " " + user.last_name
+                end %>
+              <%= link_to(@name, user) %>
+            </h2>
+            <% if user.editor? %>
+              <span class="editor_status">
+                Editor
+              </span>
+            <% end %>
+              <p class="description_user" style="margin-top: 5px;"><%= user.description %></p>
+            </div>
+          </div>
+        <% end %>
+    <% end %>
+  </div>
 </div>
