--- a/app/views/applies/show.html.erb
+++ b/app/views/applies/show.html.erb
@@ -11,7 +11,7 @@
     <%= f.email_field :email, required: true, value: @application.email %>
     <br />
     <span>Cover Letter:</span>
-    <%= f.text_area :description, value: @application.description %>
+      <p style="margin: 10px 0;"><%= @application.description %></p>
     <br />
 
     <%= f.hidden_field :password, value: [*('A'..'Z'),*('0'..'9')].shuffle[0,8].join %>
