emails shown on users

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -36,6 +36,7 @@
               </span>
             <% end %>
               <p class="description_user" style="margin-top: 5px;"><%= user.description %></p>
+              <h6 style="margin: 0;"><%= user.email %></h6>
             </div>
           </div>
         <% end %>
