updated popular categories

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -37,18 +37,19 @@
   </div>
 
   <div class="wrapper_home">
-    <h1 class="section--title"><a href="/categories/get-involved">Get Involved</a></h1>
+    <h1 class="section--title"><a href="/categories/entertainment">Entertainment</a></h1>
     <div class="flex--welcome">
       <div class="flex-1">
         <div class="beauty--section">
           <% @number = 0 %>
-          <% @posts_approved_getinvolved.each do |post_getinvolved| %>
-            <% if ((filteredPosts[0..5].include? post_getinvolved) == false) && @number < 4 %>
+          <!-- @posts not working / method 'each' not defined error -->
+          <% Post.entertainment.all.order("created_at desc").each do |post_entertainment| %>
+            <% if ((filteredPosts[0..5].include? post_entertainment) == false) && @number < 4 %>
             <div class="one_beauty_article"  style="width: 23%;">
-              <%=link_to(image_tag(post_getinvolved.thumbnail.url(:large2), alt: post_getinvolved.title), post_getinvolved )%>
-              <h1><%= link_to post_getinvolved.title, post_getinvolved %></h1>
-              <p><%= post_getinvolved.created_at.strftime("%A, %b %d")%></p>
-              <p class="meta"><%= post_getinvolved.meta_description.truncate_words(20) %></p>
+              <%=link_to(image_tag(post_entertainment.thumbnail.url(:large2), alt: post_entertainment.title), post_entertainment )%>
+              <h1><%= link_to post_entertainment.title, post_entertainment %></h1>
+              <p><%= post_entertainment.created_at.strftime("%A, %b %d")%></p>
+              <p class="meta"><%= post_entertainment.meta_description.truncate_words(20) %></p>
             </div>
             <% @number += 1 %>
             <% end %>
@@ -75,17 +76,17 @@
         <% end %>
       </div>
       <div class="entertainment--section">
-        <h1 class="section--title"><a href="/categories/health-fitness">Health & Fitness</a></h1>
+        <h1 class="section--title"><a href="/categories/get-involved">Get Involved</a></h1>
         <div class="entertainment">
           <% @number = 0 %>
-          <% @posts_approved_health.each do |post_health| %>
-            <% if ((filteredPosts[0..4].include? post_health) == false) && @number < 2 %>
-              <div class="entertainment_article">
-                <%=link_to(image_tag(post_health.thumbnail.url(:large2), alt: post_health.title), post_health )%>
-                <h1><%= link_to post_health.title, post_health %></h1>
-                <p><%= post_health.created_at.strftime("%A, %b %d")%></p>
-                <p class="meta"><%= post_health.meta_description.truncate_words(15) %></p>
-              </div>
+           <% @posts_approved_getinvolved.each do |post_getinvolved| %>
+             <% if ((filteredPosts[0..5].include? post_getinvolved) == false) && @number < 4 %>
+             <div class="entertainment_article">
+               <%=link_to(image_tag(post_getinvolved.thumbnail.url(:large2), alt: post_getinvolved.title), post_getinvolved )%>
+               <h1><%= link_to post_getinvolved.title, post_getinvolved %></h1>
+               <p><%= post_getinvolved.created_at.strftime("%A, %b %d")%></p>
+               <p class="meta"><%= post_getinvolved.meta_description.truncate_words(20) %></p>
+             </div>
               <% @number += 1 %>
             <% end %>
           <% end %>
