--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -75,23 +75,23 @@
           <% end %>
         <% end %>
       </div>
-      <div class="entertainment--section">
-        <h1 class="section--title"><a href="/categories/get-involved">Get Involved</a></h1>
-        <div class="entertainment">
-          <% @number = 0 %>
-           <% @posts_approved_getinvolved.each do |post_getinvolved| %>
-             <% if ((filteredPosts[0..5].include? post_getinvolved) == false) && @number < 4 %>
-             <div class="entertainment_article">
-               <%=link_to(image_tag(post_getinvolved.thumbnail.url(:large2), alt: post_getinvolved.title), post_getinvolved )%>
-               <h1><%= link_to post_getinvolved.title, post_getinvolved %></h1>
-               <p><%= post_getinvolved.created_at.strftime("%A, %b %d")%></p>
-               <p class="meta"><%= post_getinvolved.meta_description.truncate_words(20) %></p>
-             </div>
+      <h1 class="section--title"><a href="/categories/get-involved">Get Involved</a></h1>
+      <div class="flex--welcome">
+        <div class="flex-1">
+          <div class="beauty--section">
+            <% @number = 0 %>
+            <% @posts_approved_getinvolved.each do |post_getinvolved| %>
+            <% if ((filteredPosts[0..5].include? post_getinvolved) == false) && @number < 3 %>
+            <div class="one_beauty_article">
+              <%=link_to(image_tag(post_getinvolved.thumbnail.url(:large2), alt: post_getinvolved.title), post_getinvolved )%>
+              <h1><%= link_to post_getinvolved.title, post_getinvolved %></h1>
+              <p><%= post_getinvolved.created_at.strftime("%A, %b %d")%></p>
+              <p class="meta"><%= post_getinvolved.meta_description.truncate_words(20) %></p>
+            </div>
               <% @number += 1 %>
+              <% end %>
             <% end %>
-          <% end %>
-        </div>
-      </div>
+          </div>
       <div class="flex_entertainment_wrapper">
         <a class="applies" href="/apply"><img src="https://s3.amazonaws.com/theteenmagazine/3M0jhbo.jpg" /></a>
         <div class="entertainment_grid_container">
