--- a/app/assets/stylesheets/_newlayout.css.scss
+++ b/app/assets/stylesheets/_newlayout.css.scss
@@ -140,8 +140,8 @@
     margin-left: 40px;
     flex-grow: 1;
     flex-shrink: 1;
-    width: 270px;
-    height: 1000px;
+    width: 340px;
+    height: 1100px;
     padding-left: 20px;
     h1 {
       margin-left: 0;
@@ -153,11 +153,12 @@
     .one_article {
       display: flex;
       flex-direction: row;
-      margin: 0 10px;
+      //margin: 0 10px;
       img {
-        width: 130px;
-        height: 80px;
+        width: 150px;
+        height: 100px;
         object-fit: cover;
+        padding-bottom: 5px;
       }
       p {
         font-size: .9em;
