--- a/app/views/users/partials/_welcome.html.erb
+++ b/app/views/users/partials/_welcome.html.erb
@@ -21,7 +21,7 @@
       <span style="font-size: 12px;">- Tony Robbins</span></i>
     </p>
     <h5>What to Expect: </h5>
-      <p>The Teen Magazine's writer community will give you the guidence and experience necessary to launch your career in the
+      <p>The Teen Magazine's writer community will give you the guidance and experience necessary to launch your career in the
         journalism and blogging world. As a writer for The Teen Magazine, you will get the opportunity to:
         <ul>
           <li>
@@ -31,7 +31,7 @@
             Gain applicable experience and training in the editorial industry
           </li>
           <li>
-            Be paired with a mentor who can give you feedback and guidence
+            Be paired with a mentor who can give you feedback and guidance
           </li>
           <li>
             Interview successful people and work with brands
