--- a/app/assets/stylesheets/_newlayout.css.scss
+++ b/app/assets/stylesheets/_newlayout.css.scss
@@ -104,7 +104,7 @@
     justify-content: space-between;
     margin-top: 20px;
     .applies {
-      width: 33%;
+      width: 31%;
       margin-right: 0;
       img {
         width: 100%;
@@ -118,7 +118,8 @@
       justify-content: space-between;
       .articles2-6 {
         margin-top: 0;
-        margin-left: 0;
+        margin-left: 0 !important;
+        width: 100%;
       }
       .entertainment_article_grid {
         width: 47.5%;
@@ -337,7 +338,7 @@
       flex-direction: column !important;
       .applies {
         margin: 0 auto;
-        width: 70%;
+        width: 31%;
         margin-bottom: 20px;
       }
       }
