--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,22 +40,19 @@
     </div>
   </div>
 <% else %>
-<br />
+  <br />
 <% end %>
-  <div id="background">
-    <%= render 'profile' %>
-  </div>
-
-<% if current_user && (current_user.id == @user.id || current_user.admin || current_user.editor) %>
-<div id="posts_wrapper" class="skinny_wrapper" style="padding-top: 0px;">
-
-<div class="flex--p">
-  <p>You're signed in as <%= @user.email %></p>
-  <p class="editlink--profile"><%= link_to "Edit Profile", edit_user_path(@user) %></p>
+<div id="background">
+  <%= render 'profile' %>
 </div>
+<% if current_user && (current_user.id == @user.id || current_user.admin || current_user.editor) %>
+  <div id="posts_wrapper" class="skinny_wrapper" style="padding-top: 0px;">
+    <div class="flex--p">
+      <p>You're signed in as <%= @user.email %></p>
+      <p class="editlink--profile"><%= link_to "Edit Profile", edit_user_path(@user) %></p>
+    </div>
     <h1 id="page_title">Your Articles</h1>
-
-      <% @user_posts.each do |post| %>
+    <% @user_posts.each do |post| %>
       <div class="flex--postlist--item">
         <div class="inside--item">
           <% if post.approved && post.after_approved == true %>
@@ -71,40 +68,33 @@
         </div>
         <h6 id="date"><%= post.created_at.strftime('%A, %B %d') %></h6>
       </div>
-      <% end %>
-
-      <p>
-        <%= link_to "New Post", new_post_path(@post), :class => "newpost--profile" %>
-      </p>
-
-      <% @userHasCollaboration = false %>
-
-      <% @posts.each do |post| %>
-        <% if post.collaboration == @user.email %>
-          <% if @userHasCollaboration == false %>
-            <h1 id="page_title">Your Collaborations</h1>
-            <% @userHasCollaboration = true %>
-          <% end %>
-
-          <div class="flex--postlist--item">
-            <div class="inside--item">
-              <% if post.approved && post.after_approved == true %>
-              <%= image_tag "published.png", class: "icon" %>
-              <% elsif post.waiting_for_approval && (post.approved == nil || post.approved == false) %>
-              <%= image_tag "waiting.png", class: "icon" %>
-              <% elsif post.approved && post.after_approved == nil %>
-              <%= image_tag "approved.png", class: "icon" %>
-              <% else %>
-              <%= image_tag "saved.png", class: "icon" %>
-              <% end %>
-                <h6 id="post-title"><a href="#"><%= link_to post.title, post%></a></h6>
-            </div>
-            <h6 id="date"><%= post.created_at.strftime('%A, %B %d') %></h6>
-          </div>
+    <% end %>
+    <p><%= link_to "New Post", new_post_path(@post), :class => "newpost--profile" %></p>
+    <% @userHasCollaboration = false %>
+    <% @posts.each do |post| %>
+      <% if post.collaboration == @user.email %>
+        <% if @userHasCollaboration == false %>
+          <h1 id="page_title">Your Collaborations</h1>
+          <% @userHasCollaboration = true %>
         <% end %>
+        <div class="flex--postlist--item">
+          <div class="inside--item">
+            <% if post.approved && post.after_approved == true %>
+            <%= image_tag "published.png", class: "icon" %>
+            <% elsif post.waiting_for_approval && (post.approved == nil || post.approved == false) %>
+            <%= image_tag "waiting.png", class: "icon" %>
+            <% elsif post.approved && post.after_approved == nil %>
+            <%= image_tag "approved.png", class: "icon" %>
+            <% else %>
+            <%= image_tag "saved.png", class: "icon" %>
+            <% end %>
+              <h6 id="post-title"><a href="#"><%= link_to post.title, post%></a></h6>
+          </div>
+          <h6 id="date"><%= post.created_at.strftime('%A, %B %d') %></h6>
+        </div>
       <% end %>
+    <% end %>
   </div>
-
   <div class="guidelines">
     <div class="thelink">
       <a href="/criteria">
@@ -136,28 +126,28 @@
     </div>
   </div>
 <% else %>
-<div class="category">
-   <div class="category--show">
-     <div class="other--articles">
-       <div class="flex">
-         <div class="container">
-           <% @user_posts_approved.each do |post| %>
-             <div class="thumbnail">
-               <div class="container--image">
-                 <%=link_to(image_tag(post.thumbnail.url(:large2), :class => "image_thumbnail"), post )%>
+  <div class="category">
+     <div class="category--show">
+       <div class="other--articles">
+         <div class="flex">
+           <div class="container">
+             <% @user_posts_approved.each do |post| %>
+               <div class="thumbnail">
+                 <div class="container--image">
+                   <%=link_to(image_tag(post.thumbnail.url(:large2), :class => "image_thumbnail"), post )%>
+                 </div>
+                 <div class="thumbnail--container">
+                   <p class="date"><%= post.meta_title%></p>
+                   <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
+                   <p class="date"><%= post.created_at.strftime("%A, %b %d")%></p>
+                 </div>
                </div>
-               <div class="thumbnail--container">
-                 <p class="date"><%= post.meta_title%></p>
-                 <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
-                 <p class="date"><%= post.created_at.strftime("%A, %b %d")%></p>
-               </div>
-             </div>
-           <% end %>
+             <% end %>
+           </div>
+           <a class="apply" href="/apply" target="blank">
+           </a>
          </div>
-         <a class="apply" href="/apply" target="blank">
-         </a>
        </div>
      </div>
-   </div>
-</div>
+  </div>
 <% end %>
