--- a/app/views/applies/create.html.erb
+++ b/app/views/applies/create.html.erb
@@ -1,3 +1,5 @@
+<!-- thank you page once submitted -->
+
 <div class="submitted" style="max-width: 1000px; margin: auto;">
 <div style="padding: 0px 20px">
   <h1>Thank you for applying to The Teen Magazine!</h1>
