--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -1,3 +1,5 @@
+<!-- shows all accepted applications -->
+
 <div class="skinny_wrapper">
   <div class="skinny_wrapper">
     <h1 id="page_title">Accepted Writer Applications</h1>
