--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -2,6 +2,8 @@
 pintrk('track', 'pagevisit');
 </script>
 
+<!-- let someone create an application; sends to editor -->
+
 <h1 id="page_title">Become a Journalist for the Teen Magazine</h1>
 <div class="form_wrapper wrapper_padding">
   <%= form_for @application do |f| %>
