--- a/app/views/applies/show.html.erb
+++ b/app/views/applies/show.html.erb
@@ -1,3 +1,5 @@
+<!-- show application to editor -->
+
 <h1 id="page_title">Writer Application <%= @application.id %></h1>
 <div class="form_wrapper wrapper_padding">
   <%= form_for @user do |f| %>
