--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -10,13 +10,19 @@
           <%= render 'profile' %>
         </div>
         <div class="initial--training--wrapper">
-          <h1 id="page_title">Training modules</h1>
+          <h1 id="page_title">Training modules are not complete</h1>
           <div class="tab" id="tab1">
-            <p><span>Module 1:</span> Search Analysis</p>
+            <p><span>Module 1:</span> Brainstorming and Search Analysis</p>
             <%= image_tag "downarrow.png" %>
           </div>
           <div class="drop--down tab1--drop--down hidden">
+            <!-- brainstorming a BUNCH of potential topics -->
+            <!-- actually have to write them down in text box? -->
             <p>For years, people have been talking about “Keyword Research”.  That made sense in the days where using certain words in your headlines and in your posts would help you rank for searches including those words.  But that’s not how search works anymore, which is why “Keyword Research” is now a thing of the past.</p>
+            <div class="flex--start">
+              <p>0% completed</p>
+              <%= link_to "Start", "/choosing-a-topic", class: "button_style" %>
+            </div>
           </div>
           <div class="tab" id="tab2">
             <p><span>Module 2:</span> Pitching an Article Topic</p>
@@ -24,6 +30,11 @@
           </div>
           <div class="drop--down tab2--drop--down hidden">
             <p>For years, people have been talking about “Keyword Research”.  That made sense in the days where using certain words in your headlines and in your posts would help you rank for searches including those words.  But that’s not how search works anymore, which is why “Keyword Research” is now a thing of the past.</p>
+            <div class="flex--start">
+              <p>0% completed</p>
+              <!-- TODO: Pitching an article topic -->
+              <%= link_to "Start", "/choosing-a-topic", class: "button_style" %>
+            </div>
           </div>
           <div class="tab" id="tab3">
             <p><span>Module 3:</span> Formatting</p>
@@ -31,6 +42,11 @@
           </div>
           <div class="drop--down tab3--drop--down hidden">
             <p>For years, people have been talking about “Keyword Research”.  That made sense in the days where using certain words in your headlines and in your posts would help you rank for searches including those words.  But that’s not how search works anymore, which is why “Keyword Research” is now a thing of the past.</p>
+            <div class="flex--start">
+              <p>0% completed</p>
+              <!-- TODO: Add formatting page -->
+              <%= link_to "Start", "/formatting", class: "button_style" %>
+            </div>
           </div>
           <div class="tab" id="tab4">
             <p><span>Module 4:</span> Writing Your First Article</p>
@@ -38,6 +54,11 @@
           </div>
           <div class="drop--down tab4--drop--down hidden">
             <p>For years, people have been talking about “Keyword Research”.  That made sense in the days where using certain words in your headlines and in your posts would help you rank for searches including those words.  But that’s not how search works anymore, which is why “Keyword Research” is now a thing of the past.</p>
+            <div class="flex--start">
+              <p>0% completed</p>
+              <!-- TODO: Add text editor here -->
+              <%= link_to "Start", "/writing-the-perfect-article", class: "button_style" %>
+            </div>
           </div>
           <div class="tab" id="tab5">
             <p><span>Module 5:</span> Copyright and Finding Images</p>
@@ -45,6 +66,10 @@
           </div>
           <div class="drop--down tab5--drop--down hidden">
             <p>For years, people have been talking about “Keyword Research”.  That made sense in the days where using certain words in your headlines and in your posts would help you rank for searches including those words.  But that’s not how search works anymore, which is why “Keyword Research” is now a thing of the past.</p>
+            <div class="flex--start">
+              <p>0% completed</p>
+              <%= link_to "Start", "/finding-images", class: "button_style" %>
+            </div>
           </div>
           <div class="tab" id="tab6">
             <p><span>Module 6:</span> What Our Editors Look For</p>
@@ -52,6 +77,11 @@
           </div>
           <div class="drop--down tab6--drop--down hidden">
             <p>For years, people have been talking about “Keyword Research”.  That made sense in the days where using certain words in your headlines and in your posts would help you rank for searches including those words.  But that’s not how search works anymore, which is why “Keyword Research” is now a thing of the past.</p>
+            <div class="flex--start">
+              <p>0% completed</p>
+              <!-- TODO: Check list that editors use -->
+              <%= link_to "Start", "/checklist", class: "button_style" %>
+            </div>
           </div>
         </div>
       </div>
