--- a/app/views/pages/topics.html.erb
+++ b/app/views/pages/topics.html.erb
@@ -1,5 +1,5 @@
 <div class="skinny_wrapper topics">
-  <h1 id="page_title">Choosing A Topic</h1>
+  <h1 id="page_title">Choosing a Topic and Search Analysis</h1>
   <h3>Categories:</h3>
   <div class="categories">
     <p> Lifestyle </p>
