--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -101,6 +101,8 @@
 
   <hr />
 
+  <%= render "/posts/form" %>
+
   <p>
     If you're confused about any of this styling, or want to do something specific, you can email Marcela at <b>marcela@theteenmagazine.com</b>
   </p>
